[package]
name = "mini-btmon-rs"
version = "0.1.0"
edition = "2024"
authors = ["tinnci"]
license = "MIT"
description = "Rust library for accessing Bluetooth HCI monitor data from user-space programs"
keywords = ["bluetooth", "hci", "btmon", "bluez", "monitoring"]
categories = ["network-programming", "api-bindings"]

[features]
default = []
persist = ["serde", "serde_json"]

[dependencies]
libc = "0.2"
socket2 = "0.5"
tokio = { version = "1.35", features = ["net", "io-util", "sync", "macros", "rt", "time"] }
thiserror = "1.0"
bytes = "1.5"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = "0.3"

